Refactoring margins/paddings to properly display on Firefox.  Thanks for confirming the bug, @linuxcaffe!  Fixes #99.

--- a/inthe_am/taskmanager/static/foundation/scss/app.scss
+++ b/inthe_am/taskmanager/static/foundation/scss/app.scss
@@ -82,7 +82,6 @@ label[for] {
 div.row {
   -webkit-overflow-scrolling: touch;
   background-color: #FFFFFF;
-  margin-top: 45px;
 
   p {
     font-size: 0.95rem;
@@ -92,17 +91,27 @@ div.row {
     font-size: 0.95rem;
     line-height: 1.25rem;
   }
+  max-width: inherit;
 
   &.full-width {
     width: 100%;
     max-width: inherit;
     height: 100%;
     overflow: hidden;
+    padding-top: 45px;
   }
   &.standalone {
     overflow: auto;
+    width: 100%;
     height: 100%;
-    padding: 0px 25px 100px 25px;
+    background-color: #F0F0F0;
+
+    div.standalone-content {
+      max-width: 950px;
+      margin: 0 auto;
+      padding: 45px 25px 0px 25px;
+      background-color: #FFFFFF;
+    }
 
     ul, ol {
       margin-left: 50px;
@@ -125,7 +134,6 @@ div.row {
   overflow-y: auto;
   overflow-x: hidden;
   float: left;
-  padding-bottom: 70px;
 
   a {
     color: inherit;
